--- a/styles/login.css
+++ b/styles/login.css
@@ -1,22 +1,35 @@
+
+/* >>>>>>>>>>>>>loginCSS<<<<<<<<<<< */
+
+
 #login-form-div{
-    width: 400px;
-    height: 400px;
-    border: 2px red solid;
+    width: 15%;
+    height: 30%;
     margin: auto;
-    margin-top: 15%;
-    text-align: center;
+    margin-top: 10%;
+    /* margin-bottom: 10%; */
     padding: 5%;
+    /* border: 2px white solid; */
+    border-radius: 10%;
+    box-shadow: 0 0 20px rgba(104, 85, 224, 0.2);
+    text-align: center;
 }
 #pageName{
     /* text-align: center; */
     font-size: 300%;
+    text-shadow: 2px 2px 4px skyblue;
+    color: skyblue;
     height: 50%;
     margin-bottom: 20%;
+    text-transform: uppercase;
 }
 .inputBox{
     text-overflow: clip;
     width: 80%;
-    border: 2px red solid;
+    /* border: 2px red solid; */
+    /* box-shadow: 2px 2px 2px skyblue; */
+    background-color: skyblue;
+    border-style: none;
     font-size: 120%;
     padding: 2%;
     margin-bottom: 2%;
@@ -24,4 +37,10 @@
 #submitBtn{
     font-size: 150%;
     padding: 1% 5% 1% 5%;
+    border: 2px skyblue solid;
+    border-radius: 5%;
+    color: white;
+    border-radius: 10px;
+    background-color: skyblue;
+    box-shadow: 1px 1px 4px skyblue;
 }
